@@ -7,7 +7,6 @@ ENABLE_EDIT_TOOLBAR = true
 JS_SEARCHREPLACE = true
 ENABLE_DOUBLECLICKEDIT = false
 ENABLE_OPEN_GRAPH = false
-USECACHE = true
 ISREADONLY = false
 
 ; calculated dynamically, but need a default
