@@ -62,10 +62,9 @@
      <?php echo ActionButton("diff") ?>
      <?php if ($isAdmin) { ?>
       <?php echo ActionButton(__("PageDump"), _("Page Dump")) ?>
-      <?php if (USECACHE) { ?>
        <?php echo ActionButton(array('nocache' => 'purge'), _("Purge HTML cache"), $pagename,
                array('title'=>_("Purge HTML cache for this page. Regenerate from WikiMarkup when next accessed."))) ?>
-     <?php }} ?>
+     <?php } ?>
   </ul>
   </div>
 </div>
